fix: group width when it collapses

--- a/src/components/AsideHeader/components/CompositeBar/CompositeBar.scss
+++ b/src/components/AsideHeader/components/CompositeBar/CompositeBar.scss
@@ -27,11 +27,7 @@ $block: '.#{variables.$ns}composite-bar';
     }
 
     &__menu-group {
-        padding: var(--g-spacing-2) 0;
-
-        &:not(:last-child) {
-            border-bottom: 1px solid var(--g-color-line-generic);
-        }
+        width: 100%;
     }
 
     &__menu-group-items {
